--- a/Python/6 Branching_forloop.ipynb
+++ b/Python/6 Branching_forloop.ipynb
@@ -536,7 +536,7 @@
     }
    ],
    "source": [
-    "#apple loop for numbers\n",
+    "#apply loop for numbers\n",
     "marks=[60,70,54,89,93,95,91,34,66,72,20]\n",
     "marks"
    ]
@@ -639,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#list comprehension=shorter syntax when you want to create list based on the values of exisiting list"
+    "#list comprehension=shorter syntax when you want to create list based on the values of existing list"
    ]
   },
   {
