--- a/Test/test_1.ipynb
+++ b/Test/test_1.ipynb
@@ -10,14 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.96\n"
+      "153.86\n"
      ]
     }
    ],
    "source": [
     "#1\n",
     "rad=7\n",
-    "area=2*3.14*rad\n",
+    "area=3.14*rad*rad\n",
     "print(area)"
    ]
   },
